--- a/MyMonee-Final/.swiftlint.yml
+++ b/MyMonee-Final/.swiftlint.yml
@@ -4,6 +4,7 @@ disabled_rules: # rule identifiers turned on by default to exclude from running
   - control_statement
   - force_cast
   - trailing_whitespace
+  - line_length
 opt_in_rules: # some rules are turned off by default, so you need to opt-in
   - empty_count # Find all the available rules by running: `swiftlint rules`
 
